--- a/css/section-1.css
+++ b/css/section-1.css
@@ -3,6 +3,7 @@
     justify-content: start;
     align-items: center;
     width: 100%;
+    border-top: 1px solid #41414194;
     
 }
 .divisao-h1{
