--- a/css/section-2.css
+++ b/css/section-2.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 400px;
     gap: 10px;
+    border-top: 1px solid #41414194;
 }
 .divisao-sessao2{
     display: flex;
