--- a/css/section-3.css
+++ b/css/section-3.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 400px;
     gap: 10px;
+    border-top: 1px solid #41414194;
 }
 .divisao-sessao3{
     display: flex;
@@ -106,7 +107,7 @@ h3{
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
+        flex-direction: column;
         height: auto;
         border-top: 1px solid #41414194;
     }
