--- a/css/section-1.css
+++ b/css/section-1.css
@@ -35,7 +35,7 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-@media (max-width:768px) and (min-width:500px){
+@media (max-width:956px) and (min-width:320px){
     .sessao-1{
         display: flex;
         justify-content: center;
@@ -53,9 +53,12 @@
         text-align: center;
         font-size: 35px;
         margin-top: 10px;
+        margin-bottom: 10px;
     }
     .p-section1{
         font-size: 15px;
+        margin-top: 20px;
+        margin-bottom: 30px;
     }
 }
 @media (min-width:768px) and (max-width:1091px){
