--- a/css/section-2.css
+++ b/css/section-2.css
@@ -54,7 +54,7 @@ li{
     font-size:65px;
     color: var(--color-3);
 }
-@media (max-width:768px) and (min-width:500px){
+@media (max-width:956px) and (min-width:320px){
     .sessao-2{
         display: flex;
         justify-content: center;
@@ -69,14 +69,16 @@ li{
     .h1-sessao-2{
         text-align: center;
         font-size: 35px;
-        margin-top: 10px;
+        padding-top: 20px;
         margin-bottom: 10px;
+
     }
     .divisao-experiencias{
         display: flex;
         justify-content: center;
-        width: 400px;
+        width: 250px;
         height: auto;
+        padding-top: 40px;
         
     }
     .fa-brands{
