--- a/css/section-1.css
+++ b/css/section-1.css
@@ -14,13 +14,13 @@
     height: 400px;
 }
 .h1-section-1{
-    font-family: Roboto;
+    font-family: poppins;
     text-transform: uppercase;
     font-size: 100px;
-    color: var(--color-3);
+    color:var(--color-3);
     margin:0px;
     letter-spacing: 25px;
-    opacity:15%;
+    opacity:30%;
 }
 .divisao-p{
     display: flex;
