--- a/css/section-2.css
+++ b/css/section-2.css
@@ -71,6 +71,7 @@ li{
         font-size: 35px;
         padding-top: 20px;
         margin-bottom: 10px;
+        opacity: 30%;
 
     }
     .divisao-experiencias{
