--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import 'section-2.css';
 @import 'section-3.css';
 @import 'section-4.css';
+@import 'projects.css';
 @import 'section-5.css';
 @import 'footer.css';
 /*Colors*/
