--- a/css/projects.css
+++ b/css/projects.css
@@ -50,18 +50,104 @@ nav.project{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
     width: 90%;
 }
 .descricao-P{
-    width: 70%;
-    font-family: 'poppins';
+    text-align: center;
+    font-family:'Roboto';
+    font-weight: lighter;
 }
 .ferramentas{
     display: flex;
     justify-content: center;
-    flex-direction: row;
     align-items: center;
     gap: 50px;
     width: 100%;
-    margin-right: 200px;
+    
+}
+/*All Projects------------------------*/
+.h1-all-projects{
+    font-size: 55px;
+}
+.sessao-all-projects{
+    width: 95%;
+}
+.projeto-img{
+    cursor: pointer;
+}
+
+
+/*media queries projetos--------------------*/
+@media (max-width: 320px){
+    .h1-all-projects{
+        font-size: 25px;
+        letter-spacing: 8px;
+    }
+    .mobile{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 15px;
+        width: 80%;
+        height: auto;
+        padding: 20px;
+        border-top: 1px solid #41414194;
+    }
+}
+@media (max-width: 440px) and (min-width: 375px){
+    .h1-all-projects{
+        font-size: 35px;
+        letter-spacing: 15px;
+    }
+    .mobile{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 15px;
+        width: 80%;
+        height: auto;
+        padding: 20px;
+        border-top: 1px solid #41414194;
+    }
+}
+@media (max-width: 384px) and (min-width: 360px){
+    .h1-all-projects{
+        font-size: 30px;
+        letter-spacing: 10px;
+    }
+    .mobile{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 15px;
+        width: 85%;
+        height: auto;
+        padding: 20px;
+        border-top: 1px solid #41414194;
+    }
+}
+/*media queries-----------------------------*/
+
+@media (max-width: 440px) and (min-width: 375px){
+    .h3-projects{
+            font-size: 35px;
+            letter-spacing: 15px;
+    }
+    }
+@media (max-width: 384px) and (min-width: 360px){
+    .h3-projects{
+        font-size: 30px;
+        letter-spacing: 10px;
+    }
+}
+@media (max-width: 320px){
+    .h3-projects{
+        font-size: 25px;
+        letter-spacing: 8px;
+    }
 }
