--- a/css/section-2.css
+++ b/css/section-2.css
@@ -72,6 +72,7 @@ li{
         padding-top: 20px;
         margin-bottom: 10px;
         opacity: 30%;
+        letter-spacing: 15px;
 
     }
     .divisao-experiencias{
