--- a/css/section-1.css
+++ b/css/section-1.css
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 400px;
+    height: 180px;
     border-radius:0px 8px 8px 0px;
     padding: 10px;
 }
@@ -54,6 +54,7 @@
         font-size: 35px;
         margin-top: 10px;
         margin-bottom: 10px;
+        letter-spacing: 15px;
     }
     .p-section1{
         font-size: 15px;
