--- a/css/section-4.css
+++ b/css/section-4.css
@@ -6,6 +6,7 @@
   gap: 15px;
   width: 100%;
   height: auto;
+  margin: 0 auto;
   padding: 20px;
   border-top: 1px solid #41414194;
 }
@@ -119,4 +120,7 @@ color: var(--color-2);
     width: 80%;
     height: auto;
   }
+}
+@media (max-width:440px) and (min-width:414px){
+  
 }
