--- a/css/section-1.css
+++ b/css/section-1.css
@@ -53,13 +53,29 @@
         text-align: center;
         font-size: 35px;
         margin-top: 10px;
-        margin-bottom: 10px;
         letter-spacing: 15px;
+        margin-bottom: 20px;
+    }
+    .divisao-p{
+        width: 90%;
+        height: auto;
     }
     .p-section1{
-        font-size: 15px;
-        margin-top: 20px;
-        margin-bottom: 30px;
+        font-size: 18px;
+    }
+    
+}
+@media (max-width:440px) and (min-width:428px){
+    .p-section1{
+        font-size: 18px;
+    }
+}
+@media (max-width: 834px) and (min-width: 800px){
+    .p-section1{
+        font-size: 25px;
+    }      
+    .divisao-h1{
+        height: 200px;
     }
 }
 @media (min-width:768px) and (max-width:1091px){
