--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import 'section-3.css';
 @import 'section-4.css';
 @import 'projects.css';
+@import 'certificados.css';
 @import 'section-5.css';
 @import 'footer.css';
 /*Colors*/
@@ -22,7 +23,7 @@ html{
 body{
     background-color: #000000;
     max-width: 100%;
-    height: 100vh;
+    height: auto;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
