--- a/css/header.css
+++ b/css/header.css
@@ -3,8 +3,9 @@
 }
 .div-listas{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 25px ;
     flex-direction: row;
     width: 600px;
 }
