--- a/css/certificados.css
+++ b/css/certificados.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-top: 1px solid #41414194;
+    border: none;
+    border-top: 1px solid #2c2c2c;
 
 }
 .carousel{
@@ -23,6 +24,7 @@
       margin: 0 auto;
       letter-spacing: 5px;
       text-align: center;
+     
     }
   }
   @media (max-width: 844px) and (min-width: 390px){
@@ -33,6 +35,7 @@
       margin: 0 auto;
       letter-spacing: 8px;
       text-align: center;
+      margin-top: 20px;
     }
     
   }
