--- a/css/header.css
+++ b/css/header.css
@@ -21,7 +21,12 @@
     gap: 20px;
     padding: 0px;
 }
-
+.list-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
 a{
     text-decoration: none;
     color: var(--color-1);
@@ -173,18 +178,21 @@ img.img-portfolio{
     li > a{
         font-weight: 300;
     }
+    
     .div-listas{
         display: none;
         width:90%;
         position: absolute;
         top: 51px;
-        background-color: #600f86e5;
+        background-color: #846092fa;
         text-align: center;
         z-index: 10;
-       
+        border-radius: 0px 0px 5px 5px;
     }
     .div-listas.active{
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .menu-hamburguer{
         display: block;
@@ -193,12 +201,16 @@ img.img-portfolio{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 4px;
+        margin: 0 auto;
+        width: 100%;
         flex-direction: column;
     }
     .div-listas ul li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin: 5px 0;
-        padding-right: 332px;
+       
     }
     .div-listas a{
         color: white;
@@ -207,7 +219,17 @@ img.img-portfolio{
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 0 auto;
+        width: 100%;
+    }
+    .list-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 4px;
+    }
+    li > a{
+        color: white;
     }
 }
 @media (max-width:1024px) and (min-width:768px){
@@ -249,14 +271,16 @@ img.img-portfolio{
         width:90%;
         position: absolute;
         top: 51px;
-        background-color: #600f86e5;
+        background-color: #846092fa;
         text-align: center;
         z-index: 10;
         height: 300px;
        
     }
     .div-listas.active{
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .menu-hamburguer{
         display: block;
@@ -265,14 +289,16 @@ img.img-portfolio{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 4px;
         flex-direction: column;
+        width: 100%;
         margin-top: 45px;
     }
     .div-listas ul li{
-        margin: 5px 0;
-        padding-right: 750px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 20px;
+        margin: 5px 0;
     }
     ul > li{
         display: flex;
@@ -294,5 +320,22 @@ img.img-portfolio{
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+    }
+    .list-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 8px;
+        margin-bottom: 30px;        
+    }
+}
+@media (max-widt:1280px) and (min-width:800px){
+    .list-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 8px;
     }
 }
