--- a/css/section-1.css
+++ b/css/section-1.css
@@ -14,7 +14,7 @@
     height: 400px;
 }
 .h1-section-1{
-    font-family: poppins;
+    font-family: roboto;
     text-transform: uppercase;
     font-size: 100px;
     color:var(--color-3);
